--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/origamitower/furipota#readme",
   "dependencies": {
-    "folktale": "^2.0.0-alpha4"
+    "folktale": "^2.0.0-alpha4",
+    "ometajs": "^4.0.0"
+  },
+  "devDependencies": {
+    "chalk": "^1.1.3",
+    "deep-diff": "^0.3.4",
+    "glob": "^7.1.1",
+    "js-yaml": "^3.8.3"
   }
 }
