Records need something to separate expr from keyword
(else a: b c: d just parses the latter portion as an Invoke :x)

--- a/tests/parser/rules/invoke.yaml
+++ b/tests/parser/rules/invoke.yaml
@@ -10,7 +10,7 @@ ast:
 
 ***
 
-f "a" opt: "b"
+f "a" opt: "b", another: "c"
 ---
 result: OK
 rule: Invoke
@@ -21,3 +21,4 @@ ast:
   options: 
     !Record
     - [!Keyword opt, !Text b]
+    - [!Keyword another, !Text c]
