--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "homepage": "https://github.com/origamitower/furipota#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "folktale": "^2.0.0-alpha4",
     "glob": "^7.1.1",
-    "ometajs": "^4.0.0"
+    "moment": "^2.18.1",
+    "ometajs": "^4.0.0",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {
     "chalk": "^1.1.3",
