--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "furipota",
   "version": "0.1.0",
   "description": "A discrete FRP DSL for describing build pipelines.",
-  "main": "index.js",
+  "main": "./furipota/index.js",
+  "bin": {
+    "furipota": "./bin/furipota"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,9 +23,12 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "folktale": "^2.0.0-alpha4",
+    "fs-extra": "^2.1.2",
     "glob": "^7.1.1",
+    "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "ometajs": "^4.0.0",
+    "rimraf": "^2.6.1",
     "xtend": "^4.0.1"
   },
   "devDependencies": {
