--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "furipota",
   "version": "0.1.0",
+  "private": true,
   "description": "A discrete FRP DSL for describing build pipelines.",
   "main": "./furipota/index.js",
   "bin": {
     "furipota": "./bin/furipota"
   },
   "scripts": {
-    "a": "echo \"yo\"",
-    "b": "echo \"lo\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./bin/furipota run test",
+    "postinstall": "node ./snapshot/cli.js run build"
   },
   "repository": {
     "type": "git",
@@ -34,9 +34,7 @@
     "xtend": "^4.0.1"
   },
   "devDependencies": {
-    "chalk": "^1.1.3",
     "deep-diff": "^0.3.4",
-    "glob": "^7.1.1",
     "js-yaml": "^3.8.3"
   }
 }
