--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "./bin/furipota run test",
-    "postinstall": "node ./snapshot/cli.js run build"
+    "postinstall": "node ./.snapshot/cli.js run build"
   },
   "repository": {
     "type": "git",
