--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "depcheck": "^0.6.7",
     "folktale": "^2.0.0-alpha4",
     "fs-extra": "^2.1.2",
     "glob": "^7.1.1",
