@ is now required for options everywhere. Record options now are preceded by -, and support simple functions

--- a/tests/parser/full/simple.yaml
+++ b/tests/parser/full/simple.yaml
@@ -2,7 +2,7 @@
 import """core"""
 
 define source = watch """src/*.js"""
-define compile = source |> babel _ output-directory: """lib"""
+define compile = source |> babel _ @ -output-directory: """lib"""
 ---
 result: OK
 ast:
