--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "depcheck": "^0.6.7",
-    "folktale": "2.0.0-alpha4",
+    "folktale": "^2.0.0-rc1",
     "fs-extra": "^2.1.2",
     "glob": "^7.1.1",
     "mkdirp": "^0.5.1",
