--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "cross-spawn": "^5.1.0",
     "depcheck": "^0.6.7",
     "folktale": "^2.0.0-rc1",
     "fs-extra": "^2.1.2",
