--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "commander": "^2.9.0",
     "cross-spawn": "^5.1.0",
     "depcheck": "^0.6.7",
-    "folktale": "^2.0.0-rc1",
+    "folktale": "^2.0.0",
     "fs-extra": "^2.1.2",
     "glob": "^7.1.1",
     "mkdirp": "^0.5.1",
